[project]
name = "advent-of-code"
version = "0.1.0"
description = ""
authors = [
	{ name = "Bernhard Huber", email = "56220032+hubernhard@users.noreply.github.com" }
]
requires-python = ">=3.13"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["2022", "2023", "aoc"]

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = [
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "E", # pycodestyle errors
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "PERF", # perflint
    "PTH", # flake8-use-pathlib
    "UP", # pyupgrade
    "W", # pycodestyle warnings
]

[tool.ruff.format]
line-ending = "native"
